[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/CharCreation.gd" type="Script" id=1]
[ext_resource path="res://assets/backgrounds/spacebg.png" type="Texture" id=2]
[ext_resource path="res://fonts/arialbd.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/CharCreateContinue.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 3 )

[node name="CharCreation" type="Control"]
margin_right = 1279.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="HeroName" type="PanelContainer" parent="."]
margin_left = 283.183
margin_top = 137.415
margin_right = 917.183
margin_bottom = 244.415

[node name="HBoxContainer" type="HBoxContainer" parent="HeroName"]
margin_left = 7.0
margin_top = 7.0
margin_right = 627.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="HeroName/HBoxContainer"]
margin_top = 35.0
margin_right = 286.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "What is your characters name?"

[node name="HeroName" type="TextEdit" parent="HeroName/HBoxContainer"]
margin_left = 290.0
margin_right = 620.0
margin_bottom = 93.0
rect_min_size = Vector2( 330, 93 )
custom_fonts/font = SubResource( 2 )

[node name="DracoName" type="PanelContainer" parent="."]
margin_left = 294.734
margin_top = 284.322
margin_right = 839.734
margin_bottom = 391.322

[node name="HBoxContainer" type="HBoxContainer" parent="DracoName"]
margin_left = 7.0
margin_top = 7.0
margin_right = 606.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="DracoName/HBoxContainer"]
margin_top = 35.0
margin_right = 265.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "What is your dragons name?"

[node name="DracoName" type="TextEdit" parent="DracoName/HBoxContainer"]
margin_left = 269.0
margin_right = 599.0
margin_bottom = 93.0
rect_min_size = Vector2( 330, 93 )
custom_fonts/font = SubResource( 4 )

[node name="GenderSelect" type="PanelContainer" parent="."]
margin_left = 331.0
margin_top = 450.708
margin_right = 863.0
margin_bottom = 539.708

[node name="VBoxContainer" type="VBoxContainer" parent="GenderSelect"]
margin_left = 7.0
margin_top = 7.0
margin_right = 525.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="GenderSelect/VBoxContainer"]
margin_right = 518.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
text = "Select your charactors gender:"

[node name="HBoxContainer" type="HBoxContainer" parent="GenderSelect/VBoxContainer"]
margin_top = 28.0
margin_right = 518.0
margin_bottom = 64.0

[node name="check_Male" type="CheckBox" parent="GenderSelect/VBoxContainer/HBoxContainer"]
margin_right = 81.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )
text = "Male"

[node name="check_Female" type="CheckBox" parent="GenderSelect/VBoxContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 195.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 7 )
text = "Female"

[node name="btn_continue" type="Button" parent="."]
margin_left = 452.0
margin_top = 618.0
margin_right = 809.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 8 )
text = "Continue"
script = ExtResource( 4 )
